--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.shz</groupId>
-	<artifactId>katas</artifactId>
+	<artifactId>gameoflife</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>katas</name>
-	<url>http://maven.apache.org</url>
+	<name>Conway's Game of Life</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
